--- a/Russian Courts.ipynb
+++ b/Russian Courts.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "[**ТЕКСТОВАЯ ИНСТРУКЦИЯ**](https://drive.google.com/file/d/1LV7U5F8JFAnFdOuY6GDsTQWyb8H5s-9m/view?usp=sharing), как пользоваться Jupyter Notebook или Google Colab, если вы впервые в жизни сталкиваетесь с необходимостью работать с подобными программами.\n",
     "\n",
-    "[**ВИДЕО С ПОШАГОВОЙ ИНСТРУКЦИЕЙ**](), как пользоваться этой программой."
+    "[**ВИДЕО С ПОШАГОВОЙ ИНСТРУКЦИЕЙ**](https://youtu.be/IN2132LRLyw), как пользоваться этой программой."
    ]
   },
   {
